# lab_14

./: CMakeLists.txt  main.c
libs/algorithms/: algorithm.c  algorithm.h
libs/algorithms/array/: array.c  array.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/laba18/task/: task 9 .cpp  task1.cpp  task10.cpp  task11.cpp  task12.cpp  task13.cpp  task14.cpp  task15.cpp  task16.cpp  task17.cpp  task18.cpp  task19.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp  test_for_task.cpp
libs/data_structures/laba19/: main.c laba19.cpp  task 1.cpp  task 10.cpp  task 2.cpp  task 3.cpp  task 4.cpp  task 5.cpp  task 7.cpp  task 8.cpp  task 9.cpp  task6.cpp
libs/data_structures/laba20/infinitivePause/: task 1.cpp  task10.cpp  task11.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
libs/data_structures/matrix/: matrix.c
libs/data_structures/utili/: CMakeLists.txt  resheniya.cpp  utili.c  utili.h
libs/data_structures/vector/: vector.c  vector.h
libs/string_/: string_.c  string_.h  test_string.c
libs/utilizator/: solutions.c
